<resources>
    <string name="app_name">CoffeeDiaries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Coffee Diaries</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Top Rated Brews</string>
    <string name="menu_slideshow">Metrics</string>

<!--  fragment for brew input  -->
    <string name="brew_input_header">Add Brew</string>
    <string name="brew_date_label">Date</string>
    <string name="brew_method_label">Method</string>
    <string name="brew_name_label">Coffee Name</string>
    <string name="brew_time_label">Brew Time</string>
    <string name="brew_grams_coffee_label">Grams of Coffee</string>
    <string name="brew_calories_label">Calories</string>
    <string name="brew_rating_label">Rating</string>
    <string name="brew_comment_label">Comment</string>
    <string name="brew_date_input_hint">mm/dd/yyyy</string>
    <string name="btn_clear_brew_input">Clear</string>
    <string name="btn_submit_brew_input">Submit</string>
    <string name="brew_name_input_hint">Ex. Michigan Cherry</string>
    <string name="brew_comment_input_hint">Ex. Tasted like sweet cherries</string>
    <string name="brew_calories_input_hint">Ex. 2</string>
    <string name="brew_grams_input_hint">Ex. 10</string>
    <string name="brew_time_input_hint">Ex. 4.5</string>
    <string name="brew_rating_input_hint">Ex. 5</string>
    <string name="brew_method_input_hint">Ex. Cold Press</string>
    <string name="recyclerViewDate">10/01/2022</string>
    <string name="recyclerViewCoffeeName">Folgers</string>
    <string name="recyclerViewBrewMethod">Chemex</string>
    <string name="recyclerViewBrewRating">5</string>
    <string name="recyclerViewCoffeeNameLabel">Coffee Name:</string>
    <string name="recyclerViewBrewMethodLabel">Brew Method:</string>
    <string name="recyclerViewBrewRatingLabel">Rating:</string>

    <!-- Display labels and fallback text -->
    <string name="unknown">Unknown</string>
    <string name="unnamed_coffee">Unnamed Coffee</string>
    <string name="not_available">N/A</string>
    <string name="rating_format">Rating: %.1f/5</string>
    <string name="not_rated">Not rated</string>

    <!-- Toast messages -->
    <string name="data_cleared_success">All data cleared</string>
    <string name="data_cleared_error">Error clearing data</string>
    <string name="unable_to_clear_data">Unable to clear data</string>

    <!-- Dialog strings -->
    <string name="clear_all_data_title">Clear All Data</string>
    <string name="clear_all_data_message">Are you sure you want to delete all of your data? This cannot be undone...</string>
    <string name="clear_data_button">Clear Data</string>
    <string name="cancel_button">Cancel</string>

    <!-- ViewModel strings -->
    <string name="data_settings">Data Settings</string>
    <string name="frequency_metrics">Frequency Metrics</string>
</resources>