<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/recyclerViewDate"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/recyclerViewDate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/recyclerViewBrewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recyclerViewBrewRating"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="260dp"
                tools:layout_editor_absoluteY="73dp" />

            <TextView
                android:id="@+id/recyclerViewBrewMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recyclerViewBrewMethod"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.438"
                app:layout_constraintStart_toEndOf="@+id/recyclerViewBrewMethodLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <TextView
                android:id="@+id/recyclerViewCoffeeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/recyclerViewCoffeeName"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recyclerViewCoffeeNameLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recyclerViewCoffeeNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/recyclerViewCoffeeNameLabel"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/recyclerViewDate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recyclerViewBrewMethodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recyclerViewBrewMethodLabel"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/recyclerViewDate"
                app:layout_constraintStart_toStartOf="@+id/recyclerViewCoffeeNameLabel"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewCoffeeNameLabel" />

            <TextView
                android:id="@+id/recyclerViewBrewRatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recyclerViewBrewRatingLabel"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toEndOf="@+id/recyclerViewDate"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewBrewMethodLabel"
                app:layout_constraintVertical_bias="0.083" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>